--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MODEL_BASE_URL = "https://generativelanguage.googleapis.com/v1beta/openai/"
-MODEL_API_KEY = "AIzaSyC3G_cpPVjehFN7CB1do2vy6tS5OJ3Yj08"
+MODEL_API_KEY = "YOUR API KEY"
 MODEL_NAME = "gemini-2.0-flash"
 
 
